@@ -52,10 +52,10 @@ namespace Bam.Core
     public sealed class TokenizedString
     {
         [System.Flags]
-        public enum EFlags
+        private enum EFlags
         {
             None = 0,
-            DeferredExpansion = 0x1
+            Inline = 0x1
         }
 
         public static readonly string TokenPrefix = @"$(";
@@ -70,7 +70,6 @@ namespace Bam.Core
         private static System.Collections.Generic.List<TokenizedString> Cache = new System.Collections.Generic.List<TokenizedString>();
 
         private System.Collections.Generic.List<string> Tokens = null;
-        private System.Collections.Generic.List<int> MacroIndices = null;
         private Module ModuleWithMacros = null;
         private string OriginalString = null;
         private string ParsedString = null;
@@ -146,11 +145,6 @@ namespace Bam.Core
             {
                 if (item.StartsWith(TokenPrefix) && item.EndsWith(TokenSuffix))
                 {
-                    if (null == this.MacroIndices)
-                    {
-                        this.MacroIndices = new System.Collections.Generic.List<int>();
-                    }
-                    this.MacroIndices.Add(index);
                 }
             });
             this.Tokens = tokenized.ToList<string>();
@@ -226,10 +220,9 @@ namespace Bam.Core
         Create(
             string tokenizedString,
             Module macroSource,
-            TokenizedStringArray positionalTokens = null,
-            EFlags flags = EFlags.None)
+            TokenizedStringArray positionalTokens = null)
         {
-            return CreateInternal(tokenizedString, macroSource, false, positionalTokens, flags);
+            return CreateInternal(tokenizedString, macroSource, false, positionalTokens, EFlags.None);
         }
 
         public static TokenizedString
@@ -239,21 +232,11 @@ namespace Bam.Core
             return CreateInternal(verboseString, null, true, null, EFlags.None);
         }
 
-        private string this[int index]
+        public static TokenizedString
+        CreateInline(
+            string inlineString)
         {
-            get
-            {
-                return this.Tokens[index];
-            }
-
-            set
-            {
-                this.Tokens[index] = value;
-                if (this.MacroIndices.Contains(index))
-                {
-                    this.MacroIndices.Remove(index);
-                }
-            }
+            return CreateInternal(inlineString, null, false, null, EFlags.Inline);
         }
 
         private bool IsExpanded
@@ -268,7 +251,7 @@ namespace Bam.Core
                 {
                     return true;
                 }
-                if (EFlags.DeferredExpansion == (this.Flags & EFlags.DeferredExpansion))
+                if (this.IsInline)
                 {
                     return false;
                 }
@@ -289,18 +272,6 @@ namespace Bam.Core
         {
             var normalized = OSUtilities.IsWindowsHosting ? path.Replace('/', '\\') : path.Replace('\\', '/');
             return normalized;
-        }
-
-        private static string
-        JoinTokens(
-            System.Collections.Generic.List<string> tokens)
-        {
-            if (1 == tokens.Count)
-            {
-                return tokens[0];
-            }
-            var join = NormalizeDirectorySeparators(System.String.Join(string.Empty, tokens));
-            return join;
         }
 
         public override string
@@ -325,12 +296,25 @@ namespace Bam.Core
             }
         }
 
+        private bool IsInline
+        {
+            get
+            {
+                return (EFlags.Inline == (this.Flags & EFlags.Inline));
+            }
+        }
+
         public static void
         ParseAll()
         {
             Log.Detail("Parsing tokenized strings");
             foreach (var t in Cache)
             {
+                if (t.IsInline)
+                {
+                    Log.DebugMessage("Not parsing inline string: {0}", t.OriginalString);
+                    continue;
+                }
                 t.Parse();
             }
         }
@@ -345,6 +329,10 @@ namespace Bam.Core
         Parse(
             MacroList customMacros)
         {
+            if (this.IsInline)
+            {
+                throw new Exception("Inline TokenizedString cannot be parsed, {0}", this.OriginalString);
+            }
             if (this.Alias != null)
             {
                 return this.Alias.Parse(customMacros);
@@ -353,47 +341,41 @@ namespace Bam.Core
             {
                 return this.ParsedString;
             }
-            if (null == this.MacroIndices)
-            {
-                throw new Exception("Tokenized string '{0}', does not appear to contain any {1}...{2} tokens. Created at {3}", this.OriginalString, TokenPrefix, TokenSuffix, this.CreationStackTrace);
-            }
 
-            System.Func<TokenizedString, TokenizedString, string> expandTokenizedString = (source, tokenString) =>
+            System.Func<TokenizedString, TokenizedString, int, string> expandTokenizedString = (source, tokenString, currentIndex) =>
                 {
                     if (!tokenString.IsExpanded)
                     {
-                        // recursive
                         if (source == tokenString)
                         {
                             throw new Exception("Infinite recursion for {0}. Created at {3}", source.OriginalString, source.CreationStackTrace);
                         }
-                        if (0 == (tokenString.Flags & EFlags.DeferredExpansion))
+
+                        if (tokenString.IsInline)
                         {
-                            tokenString.Parse(null);
+                            // current token expands to nothing, and the inline string's tokens are processed next
+                            source.Tokens.InsertRange(currentIndex + 1, tokenString.Tokens);
+                            return string.Empty;
                         }
-                        else
-                        {
-                            // temporarily remove the deferred expansion flag to get a result - but don't commit this back as the parsed string
-                            // or it may not be useful in multiple scenarios, e.g. if a Tool has a deferred expansion string, with the Module using the Tool
-                            // defining one of the macros, then each Module may have a unique value for that macro - if the Tool had the value written back
-                            // as the parsed string, then the string will be considered expanded, and the same value will be used for all Modules
-                            tokenString.Flags &= ~EFlags.DeferredExpansion;
-                            var result = tokenString.Parse((this.ModuleWithMacros != null) ? this.ModuleWithMacros.Macros : null);
-                            tokenString.Flags |= EFlags.DeferredExpansion;
-                            return result;
-                        }
+
+                        // recursive
+                        tokenString.Parse(null);
                     }
                     return tokenString.ToString();
                 };
 
-            // take a copy of the macro indices
-            var macroIndices = new System.Collections.Generic.List<int>(this.MacroIndices);
-            var tokens = new System.Collections.Generic.List<string>(this.Tokens); // could just be a reserved list of strings
-            foreach (int index in this.MacroIndices.Reverse<int>())
+            var graph = Graph.Instance;
+            var parsedString = new System.Text.StringBuilder();
+            for (int index = 0; index < this.Tokens.Count; ++index)
             {
                 var token = this.Tokens[index];
+                if (!(token.StartsWith(TokenPrefix) && token.EndsWith(TokenSuffix)))
+                {
+                    parsedString.Append(token);
+                    continue;
+                }
 
-                // step 0 : is the token positional, i.e. was set up at creation time
+                // step 1 : is the token positional, i.e. was set up at creation time
                 var positional = GetMatches(token, PositionalTokenRegExPattern).FirstOrDefault();
                 if (!System.String.IsNullOrEmpty(positional))
                 {
@@ -402,108 +384,78 @@ namespace Bam.Core
                     {
                         throw new Exception("TokenizedString positional token at index {0} requested, but only {1} positional values given. Created at {2}.", positionalIndex, this.PositionalTokens.Count, this.CreationStackTrace);
                     }
-                    token = expandTokenizedString(this, this.PositionalTokens[positionalIndex]);
+                    parsedString.Append(expandTokenizedString(this, this.PositionalTokens[positionalIndex], index));
+                    continue;
                 }
-                // step 1 : try to resolve with macros passed to the Parse function
+                // step 2 : try to resolve with custom macros passed to the Parse function
                 else if (null != customMacros && customMacros.Dict.ContainsKey(token))
                 {
-                    token = expandTokenizedString(this, customMacros.Dict[token]);
+                    parsedString.Append(expandTokenizedString(this, customMacros.Dict[token], index));
+                    continue;
                 }
-                // step 2 : try macros in the global Graph, common to all modules
-                else if (Graph.Instance.Macros.Dict.ContainsKey(token))
+                // step 3 : try macros in the global Graph, common to all modules
+                else if (graph.Macros.Dict.ContainsKey(token))
                 {
-                    token = expandTokenizedString(this, Graph.Instance.Macros.Dict[token]);
+                    parsedString.Append(expandTokenizedString(this, graph.Macros.Dict[token], index));
+                    continue;
                 }
-                // step 3 : try macros in the specific module
-                else if (this.ModuleWithMacros != null && this.ModuleWithMacros.Macros.Dict.ContainsKey(token))
+                else if (this.ModuleWithMacros != null)
                 {
-                    token = expandTokenizedString(this, this.ModuleWithMacros.Macros.Dict[token]);
-                }
-                // step 4 : try macros in the Tool attached to the specific module
-                else if (this.ModuleWithMacros != null && null != this.ModuleWithMacros.Tool && this.ModuleWithMacros.Tool.Macros.Dict.ContainsKey(token))
-                {
-                    token = expandTokenizedString(this, this.ModuleWithMacros.Tool.Macros.Dict[token]);
+                    var tool = this.ModuleWithMacros.Tool;
+                    // step 4 : try macros in the specific module
+                    if (this.ModuleWithMacros.Macros.Dict.ContainsKey(token))
+                    {
+                        parsedString.Append(expandTokenizedString(this, this.ModuleWithMacros.Macros.Dict[token], index));
+                        continue;
+                    }
+                    // step 5 : try macros in the Tool attached to the specific module
+                    else if (null != tool && tool.Macros.Dict.ContainsKey(token))
+                    {
+                        parsedString.Append(expandTokenizedString(this, tool.Macros.Dict[token], index));
+                        continue;
+                    }
                 }
                 else
                 {
-                    // step 5 : try the immediate environment
+                    // step 6 : try the immediate environment
                     var strippedToken = SplitToParse(token, ExtractTokenRegExPattern).First();
                     var envVar = System.Environment.GetEnvironmentVariable(strippedToken);
                     if (null != envVar)
                     {
-                        token = envVar;
+                        parsedString.Append(envVar);
+                        continue;
                     }
-                    // step 6 : fail (if not deferred)
+                    // step 7 : fail
                     else
                     {
-                        if (0 == (this.Flags & EFlags.DeferredExpansion))
-                        {
-                            // TODO: this could be due to the user not having set a property, e.g. inputpath
-                            // is there a better error message that could be returned, other than this in those
-                            // circumstances?
-                            var message = new System.Text.StringBuilder();
-                            message.AppendFormat("Unrecognized token '{0}' from original string '{1}'", token, this.OriginalString);
-                            message.AppendLine();
-                            if (null != customMacros)
-                            {
-                                message.AppendLine("Searched in custom macros");
-                            }
-                            message.AppendLine("Searched in global macros");
-                            if (null != this.ModuleWithMacros)
-                            {
-                                message.AppendFormat("Searched in module {0}", this.ModuleWithMacros.ToString());
-                                message.AppendLine();
-                                if (null != this.ModuleWithMacros.Tool)
-                                {
-                                    message.AppendFormat("Searched in tool {0}", this.ModuleWithMacros.Tool.ToString());
-                                    message.AppendLine();
-                                }
-                            }
-                            message.AppendLine("TokenizedString created with this stack trace:");
-                            message.AppendLine(this.CreationStackTrace);
-                            throw new Exception(message.ToString());
-                        }
-                    }
-                }
-                if (null == token)
-                {
-                    throw new Exception("Token replacement for {0} was null - something went wrong during parsing of the string '{1}'. Created at {2}", tokens[index], this.OriginalString, this.CreationStackTrace);
-                }
-                tokens[index] = token;
-                if (0 == (this.Flags & EFlags.DeferredExpansion))
-                {
-                    macroIndices.Remove(index);
-                }
-            }
-            var skipFunctionEvaluation = false;
-            if (macroIndices.Count > 0)
-            {
-                if (0 == (this.Flags & EFlags.DeferredExpansion))
-                {
-                    var message = new System.Text.StringBuilder();
-                    message.AppendFormat("Input string '{0}' could not be fully expanded. Could not identify tokens", this.OriginalString);
-                    message.AppendLine();
-                    foreach (var index in macroIndices)
-                    {
-                        message.AppendFormat("\t{0}", this.Tokens[index]);
+                        // TODO: this could be due to the user not having set a property, e.g. inputpath
+                        // is there a better error message that could be returned, other than this in those
+                        // circumstances?
+                        var message = new System.Text.StringBuilder();
+                        message.AppendFormat("Unrecognized token '{0}' from original string '{1}'", token, this.OriginalString);
                         message.AppendLine();
+                        if (null != customMacros)
+                        {
+                            message.AppendLine("Searched in custom macros");
+                        }
+                        message.AppendLine("Searched in global macros");
+                        if (null != this.ModuleWithMacros)
+                        {
+                            message.AppendFormat("Searched in module {0}", this.ModuleWithMacros.ToString());
+                            message.AppendLine();
+                            if (null != this.ModuleWithMacros.Tool)
+                            {
+                                message.AppendFormat("Searched in tool {0}", this.ModuleWithMacros.Tool.ToString());
+                                message.AppendLine();
+                            }
+                        }
+                        message.AppendLine("TokenizedString created with this stack trace:");
+                        message.AppendLine(this.CreationStackTrace);
+                        throw new Exception(message.ToString());
                     }
-                    message.AppendLine("TokenizedString created with this stack trace:");
-                    message.AppendLine(this.CreationStackTrace);
-                    throw new Exception(message.ToString());
-                }
-                else
-                {
-                    skipFunctionEvaluation = true;
                 }
             }
-            var joined = JoinTokens(tokens);
-            if (skipFunctionEvaluation)
-            {
-                Log.DebugMessage("Skipped function evaluation of '{0}' (may not be fully expanded)", this.OriginalString);
-                return joined;
-            }
-            var functionEvaluated = this.EvaluateFunctions(joined);
+            var functionEvaluated = this.EvaluateFunctions(NormalizeDirectorySeparators(parsedString.ToString()));
             if (null == customMacros)
             {
                 this.ParsedString = functionEvaluated;
